tests/scan/fixtures/validation/negative/clean_go_clean-file-watcher/clean-file-watcher.go
// Package clean-file-watcher is a clean Go module.
package clean-file-watcher

func Hello() string { return "hello" }
